Task 2 with pageable